<resources>
    <string name="app_name">Recipe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="navHeader">Recipe Maintenance</string>
    <string name="viewHeader">View Recipe</string>
    <string name="detailsHeader">Recipe Details</string>
    <string name="createHeader">Create Recipe</string>


    <string name="recipeNameLabel">Name: </string>
    <string name="recipeTypeLabel">Type: </string>
    <string name="recipeIngredientLabel">Ingredient: </string>
    <string name="recipeStepLabel">Step: </string>

    <string name="createButton">Create</string>
    <string name="updateButton">Click to Update</string>
    <string name="deleteButton">Click to Delete</string>


</resources>
