<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.recipe.View.RecipeDetails">

    <TextView
        android:id="@+id/textViewNameLabel"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/recipeNameLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderUpdate"
        android:layout_marginStart="42dp" />

    <TextView
        android:id="@+id/textViewHeaderUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailsHeader"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <EditText
        android:onClick="notice"
        android:layout_width="234dp"
        android:layout_height="22dp"
        android:ems="10"
        android:id="@+id/recipeNameFieldUpdate"
        android:layout_centerHorizontal="true"
        android:background="?attr/actionModeBackground"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderUpdate"
        app:layout_constraintLeft_toRightOf="@+id/textViewNameLabel"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.211" />

    <TextView
        android:id="@+id/textViewTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipeTypeLabel"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameLabel"
        android:layout_marginLeft="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="46dp" />

    <Spinner
        android:id="@+id/spinnerTypeUpdate"
        android:layout_width="234dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/recipeNameFieldUpdate"
        app:layout_constraintLeft_toRightOf="@+id/textViewTypeLabel"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25" />

    <TextView
        android:id="@+id/textViewIngredientLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipeIngredientLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="51dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTypeLabel" />

    <EditText
        android:onClick="notice"
        android:id="@+id/ingredientFieldUpdate"
        android:layout_width="234dp"
        android:layout_height="82dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toRightOf="@+id/textViewIngredientLabel"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTypeUpdate"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25" />

    <TextView
        android:id="@+id/textViewStepLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipeStepLabel"
        android:layout_marginLeft="49dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="134dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewIngredientLabel" />

    <EditText
        android:id="@+id/stepFieldUpdate"
        android:onClick="notice"
        android:layout_width="233dp"
        android:layout_height="192dp"
        android:layout_alignStart="@+id/textViewStepLabel"
        android:layout_below="@+id/textViewStepLabel"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toRightOf="@+id/textViewStepLabel"
        app:layout_constraintTop_toBottomOf="@+id/ingredientFieldUpdate"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.27" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="135dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:onClick="update"
        android:text="@string/updateButton"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStepLabel"
        app:layout_constraintVertical_bias="0.92" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="137dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"
        android:onClick="delete"
        android:text="@string/deleteButton"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintLeft_toRightOf="@+id/buttonUpdate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStepLabel"
        app:layout_constraintVertical_bias="0.927" />

</android.support.constraint.ConstraintLayout>
